
  [ Orion Poplawski ]
  * New upstream version (4.0.1.3):
    - Protect x2goplugin.html. Make it only available from the local host.

  [ Mike Gabriel ]
  * New upstream version (4.0.1.3):
    - Fix scan for pulseaudio cookie file. Issue got introduced in X2Go Client
      4.0.1.2 and let pulseaudio sound setup fail completely in the Linux
      X2Go Client of that version. (Fixes: #384).

  [ Martti Pitkanen ]
  * New upstream version (4.0.1.3):
    - New translation of X2Go Client to Finnish.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 17 Dec 2013 15:34:49 +0100

x2goclient (4.0.1.2-0x2go2) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (4.0.1.2):
    - Provide Keywords: key in .desktop file.
    - Add NSIS packaging files for win32 builds to source tree.
      (Files provided by Oleksandr Shneyder, thanks!!!).
    - Rename win32 desktop and startmenu icon from "X2goClient" to "X2Go
      Client".
    - Store broker HTTPS certificate exceptions in
      $HOME/.x2go/ssl/exceptions (before: $HOME/ssl/exceptions).
      (Fixes: #328).
    - Perform sanity checks on data that comes in from X2Go Servers.
      Prohibit the execution of arbitrary code via the ~/.bashrc file.
      (Fixes: #333).
    - Add option --broker-cacertfile. Allow usage of non-system-wide
      installed (self-signed) SSL certificate chains for https (SSL)
      session broker connections. (Fixes: #311).
    - Update man page for new --tray-icon cmdline option.
    - Update man page for --broker-url. Explain the syntax of <URL>.
    - Properly handle (=expand) the "~" character in key filenames. (Brought to
      attention by Eldamir on IRC. Thanks!).
    - Expand tilde operator for all other file paths handed over to X2Go Client
      via sessions file or cmdline parameter.
    - Syntax fix of x2goclient.desktop file.
    - Test for various file locations of the pulseaudio cookie file.
    - Allow patching of qmake-qt4 executable path in Makefile.