@@ -19,6 +19,10 @@ x2goclient (4.0.1.3-0x2go1) UNRELEASED; urgency=low
       4.0.1.2 and let pulseaudio sound setup fail completely in the Linux
       X2Go Client of that version. (Fixes: #384).
 
+  [ Stefan Baur ]
+  * New upstream version (4.0.1.3):
+    - Update German translation file.
+
   [ Martti Pitkanen ]
   * New upstream version (4.0.1.3):
     - New translation of X2Go Client to Finnish.
